Circuits + Circuit Boards (item)
+ small bugfix (making Machine public)
* disabled registry logging
+ circuits for machines